--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
 		"@vitejs/plugin-react": "^4.3.4",
+		"gh-pages": "^6.3.0",
 		"jsdom": "^26.0.0",
 		"vite": "^6.2.1",
 		"vitest": "^3.0.8"
